--- a/portfolio.html
+++ b/portfolio.html
@@ -59,144 +59,164 @@
     <!-- Основная часть -->
     <main>
       <!-- Список фильтра -->
-      <h1 class="visually-hidden">Our works</h1>
-      <ul class="filter-list list">
-        <li class="filter-item">
-          <button class="filter-btn" type="button">Все</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn" type="button">Веб-сайты</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn" type="button">Приложения</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn" type="button">Дизайн</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn" type="button">Маркетинг</button>
-        </li>
-      </ul>
-      <!-- Список карточек работ, пока без ссылок -->
-      <ul class="projects-list list">
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/technokryak.jpg"
-              alt="Екран компьютера с открытой страницей веб-сайта"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Технокряк</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/new-orlean-vs-golden-star.jpg"
-              alt="Арт с двумя баскетболистами в игре"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/seafood-restaurant.jpg"
-              alt="Логотип ресторана"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Ресторан Seafood</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/prime-prj.jpg"
-              alt="Наушники"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Проект Prime</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/boxes-prj.jpg"
-              alt="Коробки с логотипами"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Проект Boxes</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/instipation-has-no-borders.jpg"
-              alt="Екран компьютера с открытой страницей веб-сайта"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/limited-edition.jpg"
-              alt="Разворот журнала с фотографиями"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Издание Limited Edition</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/lab-prj.jpg"
-              alt="Этикетка с логотипом"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Проект LAB</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li class="projects-card">
-          <a class="project-link link" href="">
-            <img
-              class="project-pic"
-              src="./images/growing-business.jpg"
-              alt="Главная страница сайта на екране ноутбука во время работы пользователя"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Growing Business</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-      </ul>
+      <div class="container">
+        <h1 class="visually-hidden">Our works</h1>
+        <ul class="filter-list list">
+          <li class="filter-item">
+            <button class="filter-btn" type="button">Все</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn" type="button">Веб-сайты</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn" type="button">Приложения</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn" type="button">Дизайн</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+        <!-- Список карточек работ, пока без ссылок -->
+        <ul class="projects-list list">
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/technokryak.jpg"
+                alt="Екран компьютера с открытой страницей веб-сайта"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/new-orlean-vs-golden-star.jpg"
+                alt="Арт с двумя баскетболистами в игре"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/seafood-restaurant.jpg"
+                alt="Логотип ресторана"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/prime-prj.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Проект Prime</h2>
+                <p>Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/boxes-prj.jpg"
+                alt="Коробки с логотипами"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/instipation-has-no-borders.jpg"
+                alt="Екран компьютера с открытой страницей веб-сайта"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/limited-edition.jpg"
+                alt="Разворот журнала с фотографиями"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/lab-prj.jpg"
+                alt="Этикетка с логотипом"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Проект LAB</h2>
+                <p>Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="projects-card">
+            <a class="project-link link" href="">
+              <img
+                class="project-pic"
+                src="./images/growing-business.jpg"
+                alt="Главная страница сайта на екране ноутбука во время работы пользователя"
+                width="370"
+                height="294"
+              />
+              <div class="project-desc">
+                <h2 class="project-title">Growing Business</h2>
+                <p>Приложение</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </main>
     <!-- Футер -->
     <footer class="footer">
