--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Основная часть -->
     <main>
       <!-- Hero -->
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero-title">
             Эффективные решения <br />
@@ -67,7 +67,7 @@
         </div>
       </section>
       <!-- Преимущества -->
-      <section class="features">
+      <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="features-list list">
@@ -103,7 +103,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="work">
+      <section class="work section">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="work-list list">
@@ -141,7 +141,7 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="team-list list">
