--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <!-- Основная часть -->
     <main>
       <!-- Список фильтра -->
-      <div class="container">
+      <section class="section container">
         <h1 class="visually-hidden">Our works</h1>
         <ul class="filter-list list">
           <li class="filter-item">
@@ -216,7 +216,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <!-- Футер -->
     <footer class="footer">
